# equidistant

./: .gitignore  CMakeLists.txt  README.md  Sphere.cxx  equidistant.cpp  main.cpp  object_test.stl  square.cpp
SphereVisualization/: SphereVisualization.cpp  SphereVisualization.hpp
Spherepoint/: Spherepoint.cpp  Spherepoint.hpp
Squarepoint/: Squarepoint.hpp
test/: CMakeLists.txt
test/rotate/: CMakeLists.txt  rotate.cpp
